--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "develop-algoritma/media",
+    "name": "eual8/media",
     "description": "Associate files with Eloquent models",
     "keywords": [
         "media",
